# code2postman-mcp

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
src/code2postman_mcp/: main.py
src/code2postman_mcp/tools/: handle_files.py  handle_postman.py
src/code2postman_mcp/utils/: files.py
src/postman_generator_mcp/: main.py
src/postman_generator_mcp/tools/: handle_files.py  handle_postman.py
src/postman_generator_mcp/utils/: files.py
tests/: conftest.py  run_tests.sh
tests/unit/postman_generator_mcp/tools/: test_handle_files.py  test_handle_postman.py
tests/unit/postman_generator_mcp/utils/: test_files.py
